# HybridRenderer

./: CMakeLists.txt  LICENSE  README.md
include/Just/: Common.h
include/Just/Accel/: Accel.h  BVHAccel.h  NaiveAccel.h  OctTreeAccel.h
include/Just/Camera/: ProjectiveCamera.h
include/Just/Core/: Accel.h  BSDFQuerayRecord.h  Camera.h  Emitter.h  HitRecord.h  Material.h  MeshVertex.h  RasterVertex.h  RenderContext.h  Renderer.h  SampleMeshResult.h  Sampler.h  Scene.h  Texture.h
include/Just/Emitter/: AreaLight.h
include/Just/Geometry/: Bounds.h  Mesh.h  Ray.h
include/Just/Math/: Color.h  Dpdf.h  Frame.h  Matrix.h  Ray.h  Transform.h  Vector.h  Warp.h
include/Just/Rasterizer/: SimpleRasterizer.h
include/Just/RayTracer/: SimpleTracer.h
include/Just/Render/: FrameBuffer.h  RasterVertex.h  RenderContext.h  Renderer.h
include/Just/Renderer/: HybridRenderer.h  SimpleRasterizer.h  SimpleTracer.h
include/Just/Sampler/: TrapezoidalSampler .h
include/Just/Texture/: Image.h  Texture1D.h  Texture2D.h
include/Just/Tool/: AssetsManager.h  Random.h  Timer.h
include/stbi/: stb_image.h  stb_image_write.h
src/: math_test.cpp  matrix_test.cpp  rasterize.cpp  ray_trace.cpp  stbi.c
